[tool.poetry]
name = "seedsource-core"
version = "1.0.0"
description = "Core functionality for seedsource-based applicaitons (i.e., SST and CSRT)"
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.3"
trefoil = { git = "https://github.com/consbio/trefoil.git", branch = "main" }
Django = "^1.11"
djangorestframework = "~3.7"
GDAL = "^3.2.0"
geopy = "^1.23.0"
mercantile = "^1.1.6"
ncdjango = "^0.5.2"
netCDF4 = "^1.5.5"
progress = "^1.5"
python-pptx = "^0.6.18"
WeasyPrint = "^52.2"
django-waffle = "^1"
celery = "^4.0.0"
pyproj = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
